# internet-identity

./: .didc-checksums  .didc-release  .dockerignore  .env.production  .env.showcase  .eslintrc.json  .gitignore  .gitlab-ci.yml  .ic-commit  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Demo.md  Dockerfile  FLOWS.mdx  HACKING.md  LOCALIZING.md  README.md  UI-Test.md  allowed_breaking_change.patch  canister_ids.json  devserver.js  dfx.json  dfx.sh  eslint.config.js  icp.json  icp.yaml  ii-architecture.excalidraw  jest-transform.cjs  jest.config.ts  jest.e2e.config.ts  lingui.config.ts  package-lock.json  package.json  playwright.config.ts  pow.ts  proposal.md  run-backend-tests.sh  rust-toolchain.toml  (+13 more)
.config/: nextest.toml
backend-tests/: README.md  backend-tests.cabal  backend-tests.hs  cabal.project  cabal.project.freeze  hie.yaml  ic.did  test-stable-memory-rdmx6-jaaaa-aaaaa-aaadq-cai.md
backend-tests/ic-ref/: .gitignore  CODEOWNERS  README.md  ci-pr.nix  default.nix  shell.nix
backend-tests/ic-ref/.github/workflows/: antora-branch.yml
backend-tests/ic-ref/impl/: .gitignore  .hlint.yaml  README.md  cabal.project.freeze  default.nix  example.cbor  ic-ref.cabal  shell.nix
backend-tests/ic-ref/impl/cbits/: README.md  aes.c  big_384_58.h  bls_BLS12381.c  config_curve_BLS12381.h  config_field_BLS12381.h  core.h  ecdh_BLS12381.h  ecp2_BLS12381.c  ecp_BLS12381.c  ecp_BLS12381.h  fp12_BLS12381.c  fp12_BLS12381.h  fp2_BLS12381.h  fp4_BLS12381.c  fp4_BLS12381.h  fp_BLS12381.h  gcm.c  hmac.c  hpke_BLS12381.h  mpin_BLS12381.h  newhope.c  newhope.h  pair_BLS12381.c  pair_BLS12381.h  rand.c  randapi.c  randapi.h  rom_curve_BLS12381.c  rom_field_BLS12381.c  share.c
backend-tests/ic-ref/impl/src/: SourceId.hs  ic-ref-run.hs  ic-ref-test.hs  ic-request-id.hs  unit-tests.hs
backend-tests/ic-ref/impl/test-data/: universal_canister.wasm
backend-tests/ic-ref/nix/: default.nix  generate.nix  gitSource.nix  haskell-packages.nix  python-cbor2.nix  sources.json
backend-tests/ic-ref/nix/patches/: 0001-ghc865-binary-Use-binary-distribution-which-links-ag.patch  0002-openblas-0.3.10-0.3.13.patch
backend-tests/ic-ref/spec/: .gitattributes  README.md  certificates.cddl  changelog.adoc  gen-antora.sh  ic.did  index.adoc  requests.cddl
backend-tests/ic-ref/universal-canister/: Cargo.toml  default.nix
backend-tests/ic-ref/universal-canister/src/: api.rs  main.rs
demos/test-app/: Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json  icp.yaml.example  lib.rs  package-lock.json  package.json  test_app.did  tsconfig.json  vite.config.ts  webpack.config.js
demos/test-app/src/: attributeIdentity.ts  auth.ts  callback.html  callback.tsx  icrc3.ts  index.html  index.ts  index.tsx  main.css  main.js  redirectFlow.ts
demos/test-app/src/public/: background.js  manifest.json  service-worker.js
demos/test-app/src/signer-web/: index.ts  utils.ts
demos/vc_issuer/: Cargo.toml  README.md  build.sh  dfx.example.json  dfx.json  icp.yaml.example  index.html  index.tsx  package-lock.json  package.json  provision  tsconfig.json  vc_demo_issuer.did  vc_issuer.did  vite.config.ts
demos/vc_issuer/app/: index.html  index.tsx  issuer.ts  main.css
demos/vc_issuer/src/: consent_message.rs  lib.rs  main.rs
demos/vc_issuer/tests/: issue_credential.rs
src/archive/: Cargo.toml  archive.did
src/archive/src/: anchor_index_key_tests.rs  main.rs
src/archive/tests/: tests.rs
src/archive/tests/api/: mod.rs
src/asset_util/: Cargo.toml
src/asset_util/src/: lib.rs
src/canister_sig_util/: Cargo.toml
src/canister_sig_util/src/: lib.rs  signature_map.rs
src/canister_sig_util/src/signature_map/: test.rs
src/canister_sig_util_br/: Cargo.toml
src/canister_sig_util_br/src/: lib.rs
src/canister_sig_util_br/src/signature_map/: test.rs
src/canister_tests/: Cargo.toml  README.md
src/canister_tests/src/: api.rs  certificate_validation.rs  flows.rs  framework.rs  lib.rs  tests.rs
src/canister_tests/src/api/: archive.rs  internet_identity.rs
src/idp_service/: Cargo.toml  build.rs  build.sh  idp_service.did
src/idp_service/src/: api.rs  hash.rs  lib.rs  main.rs  metrics_encoder.rs  signature_map.rs  storage.rs
src/idp_service/src/metrics_encoder/: test.rs
src/idp_service/src/signature_map/: test.rs
src/internet_identity/: Cargo.toml  breaking_change_exceptions.patch  build.rs  build.sh  index_debug.html  internet_identity.did  local_test_arg.did
src/internet_identity/src/: account_management.rs  active_anchor_stats.rs  activity_stats.rs  anchor_management.rs  archive.rs  assets.rs  attributes.rs  authz_utils.rs  constants.rs  conversions.rs  delegation.rs  dkim.rs  email_recovery_debug_log.rs  hash.rs  http.rs  ii_domain.rs  lib.rs  main.rs  mcp.rs  mcp_registration.rs  metrics_encoder.rs  nested_tree.rs  nonce_cache.rs  openid.rs  session_delegation.rs  signature_map.rs  single_flight_cache.rs  smtp.rs  state.rs  stats.rs  storage.rs  utils.rs  vc_mvp.rs  wasm_get_random.rs  web_authn.rs  web_push.rs
src/internet_identity/src/active_anchor_stats/: activity_counter.rs  stats_maintenance.rs
src/internet_identity/src/activity_stats/: activity_counter.rs  event_stats.rs  stats_maintenance.rs
src/internet_identity/src/anchor_management/: registration.rs  (+1 more)
src/internet_identity/stable_memory/: README.md  genesis-memory-layout.md
src/internet_identity/tests/: README.md  archive_integration_tests.rs  archive_integration_tests_pull.rs  archive_integration_tests_push.rs  persistent_state_migration_tests.rs  schema_migration_tests.rs  stable_memory_migration_tests.rs  tests.rs
src/internet_identity_frontend/: Cargo.toml  README.md  internet_identity_frontend.did  local_test_arg.did  local_test_arg.did.template  test_arg.did
src/internet_identity_frontend/src/: callback.rs  http.rs  main.rs
src/sig-verifier-js/: Cargo.toml  README.md  package.json  tests.ts  tsconfig.json  vitest.config.ts
src/sig-verifier-js/src/: lib.rs
src/vc_util/: Cargo.toml
src/vc_util/src/: custom.rs  issuer_api.rs  lib.rs
src/vc_util_br/: Cargo.toml
src/vc_util_br/src/: lib.rs
(+2686 files in other folders)
