[workspace]
members = [
    "src/asset_util",
    "src/internet_identity",
    "src/canister_tests",
    "src/internet_identity_interface",
    "src/archive",
    "src/sig-verifier-js"
]
resolver = "2"

[profile.release]
debug = false # stripped by ic-wasm anyway
lto = true
opt-level = 'z'


[workspace.dependencies]
# local dependencies
asset_util = { path = "src/asset_util" }
canister_tests = { path = "src/canister_tests" }
internet_identity_interface = { path = "src/internet_identity_interface" }

# ic dependencies
candid = "0.10"
candid_parser = "0.1.2"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-cdk-timers = "0.7"
ic-certification = "2.2"
ic-http-certification = "2.2"
ic-metrics-encoder = "1"
ic-representation-independent-hash = "2.2"
ic-response-verification = "2.2"
ic-stable-structures = "0.6"
ic-verifiable-credentials = {git = "https://github.com/dfinity/verifiable-credentials-sdk", rev = "2bc90b2ce7355ba68001fcc484bdc31f2fe8e820"}
ic-canister-sig-creation = "1.1"
pocket-ic = "4.0"

# other dependencies
assert_matches = "1.5.0"
base64 = "0.21"
hex = "0.4"
include_dir = "0.7"
lazy_static = "1.4"
regex = "1.9"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.10"
