[workspace]

[package]
name = "vc_issuer"
description = "Verifiable Credentials Issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
# local dependencies
canister_sig_util = { path = "../../src/canister_sig_util" }
internet_identity_interface = { path = "../../src/internet_identity_interface" }
vc_util = { path = "../../src/vc_util" }
asset_util = { path = "../../src/asset_util" }
# ic dependencies
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-certification = "2.2"
ic-stable-structures = "0.6.0"

# other dependencies
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "^0.10" # set bound to match ic-certified-map bound
strfmt = "0.2"
lazy_static = "1.4"
include_dir = "0.7"

[dev-dependencies]
assert_matches = "1.5.0"
candid_parser = "0.1"
ic-http-certification = "2.2"
ic-test-state-machine-client = "3"
ic-response-verification = "2.2"
canister_tests = { path = "../../src/canister_tests" }
