[package]
name = "archive"
description = "Internet Identity Archive Canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
internet_identity_interface = { path = "../internet_identity_interface" }
# ic dependencies
candid = "0.9"
ic-cdk = "0.10"
ic-cdk-timers = "0.4"
ic-cdk-macros = "0.7"
ic-metrics-encoder = "1"
ic-stable-structures = "0.5"
# other
serde = "1"
serde_bytes = "0.11"
pocket-ic = { git = "https://github.com/dfinity/ic.git" }


[dev-dependencies]
candid = { version = "0.9", features = ["parser"] }
canister_tests = { path = "../canister_tests" }
hex = "0.4"
regex = "1.9"
