[package]
name = "canister_sig_util"
description = "Utils for handling canister signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
# ic dependencies
candid.workspace = true
ic-certification.workspace = true

# other dependencies
lazy_static.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_matches.workspace = true
rand = { version ="0.8.5" }
