[package]
name = "canister_sig_util"
description = "Utils for handling canister signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
# ic dependencies
candid.workspace = true
ic-cdk.workspace = true
ic-certification.workspace = true
ic-representation-independent-hash = "2.5"

# other dependencies
hex.workspace = true
lazy_static.workspace = true
serde = { version = "1", features = ["derive"] }
serde_bytes.workspace = true
serde_cbor.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_matches.workspace = true
rand = { version ="0.8.5" }
