[package]
name = "idp_service"
version = "0.1.0"
edition = "2018"

[dependencies]
certified_map = { path = "../certified_map" }
hashtree = { path = "../hashtree" }
ic-cdk = { path = "../../../cdk-rs/src/ic-cdk" }
ic-cdk-macros = "0.2"
ic-types = "0.1.1"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "1.6.2"
sha2 = "0.9.1"

[dev-dependencies]
hex-literal = "0.2.1"
