[package]
name = "internet_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
internet_identity_interface = { path = "../internet_identity_interface" }

hex = "0.4"
include_dir = "0.7"
lazy_static = "1.4"
serde = { version = "1", features = ["rc"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "^0.10" # set bound to match ic-certified-map bound

# Captcha deps
lodepng = "*"
base64 = "*"

rand = { version ="*", default-features = false }

rand_core = { version = "*", default-features = false }
rand_chacha = { version = "*", default-features = false }
captcha = { git = "https://github.com/nmattia/captcha", rev = "9c0d2dd9bf519e255eaa239d9f4e9fdc83f65391" }

# All IC deps
candid = "0.9"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
ic-certified-map = "0.4"
ic-metrics-encoder = "1"
ic-stable-structures = "0.5"

# VC deps
canister_sig_util = { path = "../canister_sig_util" }
vc_util = { path = "../vc_util" }
identity_core = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test" }
identity_credential = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false, features = ["credential"]}
identity_jose = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false, features = ["iccs"]}


[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
ic-test-state-machine-client = "3"
candid = { version = "0.9", features = ["parser"] }
canister_tests = { path = "../canister_tests" }
hex-literal = "0.4"
regex = "1.9"
ic-response-verification = "1.0"


[features]
# the dummy_captcha feature which ensures the captcha string is always "a"
# (needed for tests)
dummy_captcha = []
# the insecure requests disables removes the 'upgrade-insecure-requests' directive from the CSP in oder to allow local
# development with Safari.
insecure_requests = []
