[package]
name = "internet_identity_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for HTTP gateway functionality
internet_identity_interface.workspace = true
serde_bytes.workspace = true

# IC canister dependencies
candid = { workspace = true, features = ["value"] }
ic-cdk.workspace = true
ic-cdk-macros.workspace = true

# Asset certification
ic-http-certification.workspace = true
ic-asset-certification.workspace = true
include_dir.workspace = true

# Asset utilities and encoding
asset_util.workspace = true
base64.workspace = true
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2.workspace = true
lazy_static.workspace = true
flate2 = "1.1.5"
ic-cdk-timers.workspace = true

[dev-dependencies]
candid_parser.workspace = true
canister_tests.workspace = true
ic-response-verification.workspace = true
pocket-ic.workspace = true


