[package]
name = "sig_verifier_js"
description = "JavaScript Wasm wrapper for verifying signatures"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# TODO: prune
ic-crypto-standalone-sig-verifier = { git = "https://github.com/dfinity/ic", rev = "e69bcc7b319cbb3ebc22ec55af35287741244db6" }
ic-types = { git = "https://github.com/dfinity/ic", rev = "e69bcc7b319cbb3ebc22ec55af35287741244db6" }
candid.workspace = true
canister_sig_util.workspace = true
vc_util.workspace = true
wasm-bindgen = "0.2"
