[package]
name = "sig_verifier_js"
description = "JavaScript Wasm wrapper for verifying signatures"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ic-crypto-standalone-sig-verifier.workspace = true
ic-types.workspace = true
candid = "0.10"
canister_sig_util = { path = "../canister_sig_util" }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["std"] }
wasm-bindgen = "0.2"

[dev-dependencies]
assert_matches = "1.5.0"