[package]
name = "vc_util"
description = "Utils for verifiable credentials on the IC"
version = "0.1.0"
edition = "2021"

[dependencies]
# ic dependencies
candid = "0.9"
ic-certified-map = "0.4"
ic-crypto-standalone-sig-verifier = { git = "https://github.com/dfinity/ic", rev = "bf9bc00b032a18d2dbcfcfcfb7a76a562f350c9e" }
ic-types = { git = "https://github.com/dfinity/ic", rev = "bf9bc00b032a18d2dbcfcfcfb7a76a562f350c9e" }
canister_sig_util = { path = "../canister_sig_util" }

# vc dependencies
identity_core = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false }
identity_credential = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false , features = ["validator"] }
identity_jose = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false, features = ["iccs"]}

# other dependencies
serde = { version = "1", features = ["rc"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "^0.10" # set bound to match ic-certified-map bound

[dev-dependencies]
assert_matches = "1.5.0"
