[package]
name = "vc_util"
description = "Utils for verifiable credentials on the IC"
version = "0.1.0"
edition = "2021"

[dependencies]
# ic dependencies
candid.workspace = true
ic-certification.workspace = true
ic-crypto-standalone-sig-verifier.workspace = true
ic-types.workspace = true
canister_sig_util.workspace = true

# vc dependencies
identity_core = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false }
identity_credential = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false , features = ["validator"] }
identity_jose = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false, features = ["iccs"]}

# other dependencies
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json = "1"
sha2.workspace = true

[dev-dependencies]
assert_matches.workspace = true
