[package]
name = "vc_util"
description = "Utils for verifiable credentials on the IC"
version = "0.1.0"
edition = "2021"

[dependencies]
# ic dependencies
candid.workspace = true
ic-certification.workspace = true
ic-crypto-standalone-sig-verifier.workspace = true
ic-types.workspace = true
canister_sig_util.workspace = true

# vc dependencies
identity_core = { git = "https://github.com/dfinity/identity.rs.git", rev = "aa510ef7f441848d6c78058fe51ad4ad1d9bd5d8", default-features = false, features = ["ic-wasm"] }
identity_credential = { git = "https://github.com/dfinity/identity.rs.git", rev = "aa510ef7f441848d6c78058fe51ad4ad1d9bd5d8", default-features = false , features = ["ic-wasm", "validator"] }
identity_jose = { git = "https://github.com/dfinity/identity.rs.git", rev = "aa510ef7f441848d6c78058fe51ad4ad1d9bd5d8", default-features = false}

# other dependencies
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json = "1"
sha2.workspace = true

[dev-dependencies]
assert_matches.workspace = true
