[package]
name = "vc_util"
description = "Utils for verifiable credentials on the IC"
version = "0.1.0"
edition = "2021"

[dependencies]
# ic dependencies
candid = "0.9"
ic-cdk = "0.10"
ic-certification = { version = "1.2.0", features = ["serde", "serde_bytes"] }
ic-certified-map = "0.4"
canister_sig_util = { path = "../canister_sig_util_br" }

# vc dependencies
identity_core = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false }
identity_credential = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false , features = ["validator"] }
identity_jose = { git = "https://github.com/frederikrothenberger/identity.rs.git", branch = "frederik/wasm-test", default-features = false, features = ["iccs"]}
# identity_core = { path = "../../../identity.rs/identity_core" }
# identity_credential = { path = "../../../identity.rs/identity_credential", default-features = false, features = ["credential", "validator"]}
# identity_jose = { path = "../../../identity.rs/identity_jose", default-features = false, features = ["iccs"]}

# other dependencies
hex = "0.4"
serde = { version = "1", features = ["rc"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
serial_test = "2"
sha2 = "^0.10" # set bound to match ic-certified-map bound

[dev-dependencies]
assert_matches = "1.5.0"
ic-test-state-machine-client = "3"
candid = { version = "0.9", features = ["parser"] }
canister_tests = { path = "../../src/canister_tests" }
ic-cbor = "1.2.0"
ic-certification-testing = { git = "https://github.com/dfinity/response-verification.git" }
ic-response-verification-test-utils = { git = "https://github.com/dfinity/response-verification.git" }
lazy_static = "1.4"
rand = { version ="0.8.5" }
